--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 <!-- As a link -->
 <nav class="navbar navbar-light bg-success">
-  <a class="navbar-brand" href="#">FACE RECOGNITION + ATTENDANCE PROJECT</a>
+  <a class="navbar-brand" href="#">FACE RECOGNITION + ATTENDANCE PROJECT By Dhruv</a>
 </nav>
 <br>
  <div class="mx-auto" style="width: 700px;">
@@ -27,6 +27,6 @@
    <button type="button" class="btn btn-success">Upload New image</button>
 </a>
 </div>
-<p class="mt-5 mb-3 text-muted text-center">&copy; 2022-2023</p>
+<p class="mt-5 mb-3 text-muted text-center">&copy; 2022-2023 ©Dhruv</p>
 </body>
 </html>
