--- a/templates/upload.html
+++ b/templates/upload.html
@@ -17,7 +17,7 @@
 </nav>
 
   <nav class="navbar navbar-light bg-success">
-    <span class="navbar-brand mb-0 h1" >FACE RECOGNITION + ATTENDANCE PROJECT</span>
+    <span class="navbar-brand mb-0 h1" >FACE RECOGNITION + ATTENDANCE PROJECT By Dhruv</span>
   </nav>
 
 <div class="container">
@@ -56,6 +56,6 @@
 </div>
 
 
-<p class="mt-5 mb-3 text-muted text-center">&copy; 2022-2023</p>
+<p class="mt-5 mb-3 text-muted text-center">&copy; 2022-2023 ©Dhruv</p>
 </body>
 </html>
